# gmail-cleanup-automation

./: .gitignore  AUTH_CONFIG_IMPLEMENTATION.md  AUTH_CONFIG_README.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  config.toml.example  gmail-automation-fds.md  gmail-automation-implementation-spec.md
assets/: decisions.json  report-2baccf9e-1378-45a3-a597-003174f5d3cf.md
src/: auth.rs  circuit_breaker.rs  classifier.rs  cli.rs  client.rs  config.rs  error.rs  exclusions.rs  filter_manager.rs  interactive.rs  label_manager.rs  lib.rs  main.rs  models.rs  rate_limiter.rs  scanner.rs  state.rs
tests/: mock_generator_test.rs  state_file_size_test.rs  unmanage_tests.rs
tests/common/: mod.rs
tests/performance/: classification_benchmark.rs  memory_limits.rs  memory_tracking_allocator.rs  memory_usage_test.rs  mock_generator.rs  mod.rs  state_file_size_test.rs
