[package]
name = "gmail-automation"
version = "0.6.2"
edition = "2021"
rust-version = "1.70"
license = "MIT"

[dependencies]
# Gmail API
google-gmail1 = "6.0.0"
# Note: yup-oauth2 TLS features are platform-specific (see target sections below)
yup-oauth2 = { version = "12.1.0", default-features = false, features = ["hyper-rustls"] }

# Async runtime
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"
futures-buffered = "0.2"
async-stream = "0.3"

# HTTP client (required by google-gmail1)
# Note: TLS crypto provider features are platform-specific (see target sections below)
hyper = "1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "native-tokio", "tls12", "logging"] }
hyper-util = "0.1"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
httpdate = "1.0"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
crossterm = "0.28"
inquire = "0.7"

# Regex and patterns
regex = "1.10"
once_cell = "1.19"

# Caching
lru = "0.12"

# Database (optional)
rusqlite = { version = "0.30", features = ["bundled"], optional = true }

# ML providers (optional)
async-openai = { version = "0.17", optional = true }

# Python bridge for Claude Agents SDK (optional)
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }

# Base64 encoding
base64 = "0.22"

# Async trait support
async-trait = "0.1"

# UUID generation for state management
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"
proptest = "1.8"
tempfile = "3"
rand = "0.8"
serial_test = "3.2"

[features]
default = ["cli"]
cli = []
cache = ["rusqlite"]
ml = ["async-openai"]
claude-agents = ["pyo3", "ml"]

# Platform-specific TLS crypto provider configuration
# On non-Windows platforms, use aws-lc-rs (better performance, FIPS support)
# On Windows, use ring (better compatibility, no NASM/CMake required)

[target.'cfg(not(windows))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "native-tokio", "tls12", "logging", "aws-lc-rs"] }
yup-oauth2 = { version = "12.1.0", default-features = false, features = ["hyper-rustls", "aws-lc-rs"] }

[target.'cfg(windows)'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "native-tokio", "tls12", "logging", "ring"] }
yup-oauth2 = { version = "12.1.0", default-features = false, features = ["hyper-rustls", "ring"] }
